# cutouts_service

./: .gitmodules  CHANGELOG.md  LICENCE  README.md  contributing.md  pyproject.toml
src/cutouts_service/: __init__.py  cli.py  cutout.py  fits_utils.py  utils.py
src/cutouts_service/cutouts/: FITSheader.py  ObjStore.py  S3Object.py  URLObject.py  __init__.py  astropy_cutout.py  cutout.py  get_access_keys.py  objstore_cutout.py  objstore_cutout_cwrk.py  objstore_test.py
src/cutouts_service/objstore/: FITSheader.py  ObjStore.py  S3Object.py  URLObject.py  get_access_keys.py
tests/: conftest.py  test_astropy_cutout.py  test_cli.py  test_cutout.py  test_fits_utils.py  test_objstore_cutout.py  test_utils.py
